remote event 따라 변경사항 바로 반영

--- a/vanilla-editor/index.html
+++ b/vanilla-editor/index.html
@@ -40,6 +40,12 @@
                     root.text = editor.innerHTML;
                 })
             })
+
+            doc.subscribe(e => {
+                if (e.type == 'remote-change') {
+                    editor.innerHTML = doc.getRoot().text;
+                }
+            })
         }
         main();
     </script>
