커서 위치해 있던 곳 내용 삭제되었을 때 오류 처리

--- a/vanilla-editor/index.html
+++ b/vanilla-editor/index.html
@@ -53,7 +53,10 @@
                 if (e.type == 'remote-change') {
                     const saved = rangy.serializeSelection(editor, true);
                     editor.innerHTML = doc.getRoot().text;
-                    rangy.deserializeSelection(saved);
+                    try {
+                        rangy.deserializeSelection(saved);
+                    } catch {
+                    }
                 }
             })
         }
